<resources>
    <string name="app_name">My Modules</string>
    <string name="C346">C346 Android Programming</string>
    <string name="C331">C331 Digital Security and Forensics</string>
    <string name="C203">C203 Web Appln Development in php</string>
    <string name="C228">C228 Operating Systems Security</string>
    <string name="C328">C328 Intelligent Networks</string>
    <string name="back">BACK</string>

</resources>