<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/C346"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C346"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/C331"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C331"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/C203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C203"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/C228"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C228"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/C328"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C328"
        android:textSize="18sp"/>

</LinearLayout>